--- a/k8s/07-autoscaling.yaml
+++ b/k8s/07-autoscaling.yaml
@@ -10,6 +10,27 @@ spec:
     name: main-api
   minReplicas: 3
   maxReplicas: 10
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 300
+      policies:
+      - type: Percent
+        value: 50
+        periodSeconds: 15
+      - type: Pods
+        value: 2
+        periodSeconds: 15
+      selectPolicy: Min
+    scaleUp:
+      stabilizationWindowSeconds: 0
+      policies:
+      - type: Percent
+        value: 100
+        periodSeconds: 15
+      - type: Pods
+        value: 4
+        periodSeconds: 15
+      selectPolicy: Max
   metrics:
   - type: Resource
     resource:
@@ -23,6 +44,13 @@ spec:
       target:
         type: Utilization
         averageUtilization: 80
+  - type: Pods
+    pods:
+      metric:
+        name: http_request_duration_ms
+      target:
+        type: AverageValue
+        averageValue: "500"
 
 ---
 apiVersion: autoscaling/v2
@@ -37,6 +65,24 @@ spec:
     name: auth-service
   minReplicas: 2
   maxReplicas: 8
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 300
+      policies:
+      - type: Percent
+        value: 50
+        periodSeconds: 15
+      selectPolicy: Min
+    scaleUp:
+      stabilizationWindowSeconds: 0
+      policies:
+      - type: Percent
+        value: 100
+        periodSeconds: 15
+      - type: Pods
+        value: 2
+        periodSeconds: 15
+      selectPolicy: Max
   metrics:
   - type: Resource
     resource:
@@ -64,6 +110,24 @@ spec:
     name: image-service
   minReplicas: 2
   maxReplicas: 8
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 300
+      policies:
+      - type: Percent
+        value: 50
+        periodSeconds: 15
+      selectPolicy: Min
+    scaleUp:
+      stabilizationWindowSeconds: 0
+      policies:
+      - type: Percent
+        value: 100
+        periodSeconds: 15
+      - type: Pods
+        value: 2
+        periodSeconds: 15
+      selectPolicy: Max
   metrics:
   - type: Resource
     resource:
