--- a/k8s/08-prometheus.yaml
+++ b/k8s/08-prometheus.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-config
-  namespace: prod-monitoring
+  namespace: kube-system
 data:
   prometheus.yml: |
     global:
@@ -25,16 +25,41 @@ data:
         action: keep
         regex: default;kubernetes;https
 
+    # kind FIX: scrape kubelet via apiserver proxy to avoid x509 "no IP SANs"
     - job_name: 'kubernetes-nodes'
-      kubernetes_sd_configs:
-      - role: node
       scheme: https
       tls_config:
-        ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+        insecure_skip_verify: true
       bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+      kubernetes_sd_configs:
+      - role: node
       relabel_configs:
       - action: labelmap
         regex: __meta_kubernetes_node_label_(.+)
+      - target_label: __address__
+        replacement: kubernetes.default.svc:443
+      - source_labels: [__meta_kubernetes_node_name]
+        regex: (.+)
+        target_label: __metrics_path__
+        replacement: /api/v1/nodes/$1/proxy/metrics
+
+    # IMPORTANT: cAdvisor metrics for container CPU/RAM (Grafana Kubernetes dashboards depend on these)
+    - job_name: 'kubernetes-nodes-cadvisor'
+      scheme: https
+      tls_config:
+        insecure_skip_verify: true
+      bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+      kubernetes_sd_configs:
+      - role: node
+      relabel_configs:
+      - action: labelmap
+        regex: __meta_kubernetes_node_label_(.+)
+      - target_label: __address__
+        replacement: kubernetes.default.svc:443
+      - source_labels: [__meta_kubernetes_node_name]
+        regex: (.+)
+        target_label: __metrics_path__
+        replacement: /api/v1/nodes/$1/proxy/metrics/cadvisor
 
     - job_name: 'kubernetes-pods'
       kubernetes_sd_configs:
@@ -66,7 +91,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: prometheus
-  namespace: prod-monitoring
+  namespace: kube-system
   labels:
     app: prometheus
 spec:
@@ -116,7 +141,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prometheus
-  namespace: prod-monitoring
+  namespace: kube-system
   labels:
     app: prometheus
 spec:
@@ -134,7 +159,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: prometheus
-  namespace: prod-monitoring
+  namespace: kube-system
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -142,6 +167,9 @@ kind: ClusterRole
 metadata:
   name: prometheus
 rules:
+- nonResourceURLs:
+  - /metrics
+  verbs: ["get"]
 - apiGroups: [""]
   resources:
   - nodes
@@ -150,8 +178,7 @@ rules:
   - endpoints
   - pods
   verbs: ["get", "list", "watch"]
-- apiGroups:
-  - extensions
+- apiGroups: ["networking.k8s.io"]
   resources:
   - ingresses
   verbs: ["get", "list", "watch"]
@@ -168,4 +195,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: prometheus
-  namespace: prod-monitoring
+  namespace: kube-system
