--- a/k8s/02-main-api.yaml
+++ b/k8s/02-main-api.yaml
@@ -37,8 +37,6 @@ spec:
           env:
             - name: PORT
               value: "3000"
-
-            # ✅ aligned with updated server.js + secrets.yaml
             - name: AUTH_URL
               valueFrom:
                 secretKeyRef:
@@ -84,12 +82,23 @@ metadata:
   namespace: prod-api
   labels:
     app: main-api
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "3000"
+    prometheus.io/path: "/metrics"
 spec:
   type: ClusterIP
   selector:
     app: main-api
   ports:
+    # App traffic (Ingress / internal calls)
     - name: http
-      port: 80          # ✅ standard service port
-      targetPort: 3000  # app port
+      port: 80
+      targetPort: 3000
+      protocol: TCP
+
+    # Direct metrics port (super handy for port-forward + debugging)
+    - name: metrics
+      port: 3000
+      targetPort: 3000
       protocol: TCP
