--- a/k8s/03-auth-service.yaml
+++ b/k8s/03-auth-service.yaml
@@ -21,6 +21,10 @@ spec:
       labels:
         app: auth-service
         version: v1
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
+        prometheus.io/path: "/metrics"
     spec:
       containers:
       - name: auth-service
